--- a/package.json
+++ b/package.json
@@ -3,36 +3,60 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "build:client": "ng build",
+    "build:server": "ng run website-cli:server",
+    "build:prod": "ng build --prod --output-hashing=none",
+    "prerender": "./node_modules/.bin/ts-node ./prerender.ts",
+    "build:all": "npm run build:client && npm run build:server && npm run prerender",
+    "start:server": "./node_modules/.bin/ts-node ./server.ts",
+    "build:micro": "ng build --prod --extraWebpackConfig webpack.extra.js --output-hashing none --single-bundle true",
+    "start": "ng serve --port 3001",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "tsc": "tsc -p tsconfig.json --outDir js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
+    "@angular/animations": "~7.0.3",
+    "@angular/cdk": "^7.0.3",
+    "@angular/common": "~7.0.3",
+    "@angular/compiler": "~7.0.3",
+    "@angular/core": "~7.0.3",
+    "@angular/elements": "^7.0.3",
+    "@angular/forms": "~7.0.3",
+    "@angular/http": "~7.0.3",
+    "@angular/material": "^7.0.3",
+    "@angular/platform-browser": "~7.0.3",
+    "@angular/platform-browser-dynamic": "~7.0.3",
+    "@angular/platform-server": "~7.0.3",
+    "@angular/router": "~7.0.3",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
+    "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
+    "express": "^4.16.4",
+    "hammerjs": "^2.0.8",
+    "path": "^0.12.7",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "~6.3.3",
+    "systemjs": "^2.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^7.0.0",
+    "@angular-builders/dev-server": "^7.0.0",
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@angular/cli": "~7.0.5",
+    "@angular/compiler-cli": "~7.0.3",
+    "@angular/language-service": "~7.0.3",
+    "@types/express": "^4.16.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "http-server": "^0.11.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -40,6 +64,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngx-build-plus": "^7.1.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
