build micro as library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    // "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -16,7 +15,15 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "clients-lib": [
+        "dist/clients-lib"
+      ],
+      "clients-lib/*": [
+        "dist/clients-lib/*"
+      ]
+    }
   },
   "exclude": [
     "node_modules",
@@ -25,5 +32,5 @@
     "dist-server",
     "e2e",
     "prerender"
-  ] 
+  ]
 }
