--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build:client": "ng build",
+    "build:library": "ng build clients-lib",
+    "build:client": "ng build --output-hashing none ",
     "build:server": "ng run website-cli:server",
     "build:prod": "ng build --prod --output-hashing=none",
     "prerender": "./node_modules/.bin/ts-node ./prerender.ts",
@@ -42,12 +43,14 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.3.3",
     "systemjs": "^2.1.1",
+    "umd": "^3.0.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^7.0.0",
     "@angular-builders/dev-server": "^7.0.0",
     "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-ng-packagr": "^0.10.5",
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "~7.0.3",
     "@angular/language-service": "~7.0.3",
@@ -64,10 +67,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
     "ngx-build-plus": "^7.1.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "webpack-merge": "^4.1.4"
   }
 }
